--- a/ASProjektWPF/Pages/Announcment_AddEdit.xaml
+++ b/ASProjektWPF/Pages/Announcment_AddEdit.xaml
@@ -9,7 +9,7 @@
       Title="Announcment_AddEdit">
     <ScrollViewer>
         <StackPanel>
-            <Button Padding="10" Margin="10" HorizontalAlignment="Left" Background="Transparent" BorderThickness="0" Click="Btn_Back_Click">
+            <Button Style="{StaticResource TransparentBackButton}" Padding="10" Margin="10" HorizontalAlignment="Left" Background="Transparent" BorderThickness="0" Click="Btn_Back_Click">
                 <Image Source="/Images/App/back.png" MaxHeight="20"/>
             </Button>
             <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -86,7 +86,7 @@
                             </ListView>
                             <Label Content="Nazwa obowiązku: "/>
                             <TextBox x:Name="TxtB_Responsibility_Content"/>
-                            <Button x:Name="Btn_AddResponsible" Content="Dodaj obowiązek" HorizontalAlignment="Center" Padding="10" Click="Btn_AddResponsibleItem_Click"/>
+                            <Button x:Name="Btn_AddResponsible" Content="Dodaj obowiązek" Style="{StaticResource SearchButton}" Margin="10" HorizontalAlignment="Center" Padding="10" Click="Btn_AddResponsibleItem_Click"/>
                         </StackPanel>
                         <TextBlock Text="Wymagania: "/>
                         <StackPanel>
@@ -120,7 +120,7 @@
                             </ListView>
                             <Label Content="Nazwa wymagania: "/>
                             <TextBox x:Name="TxtB_Requirement_Content"/>
-                            <Button Content="Dodaj Wymaganie" HorizontalAlignment="Center" Padding="10" Click="Btn_AddRequirementItem_Click"/>
+                            <Button Content="Dodaj Wymaganie" Style="{StaticResource SearchButton}" Margin="10" HorizontalAlignment="Center" Padding="10" Click="Btn_AddRequirementItem_Click"/>
                         </StackPanel>
                         <TextBlock Text="Benefity: "/>
                         <StackPanel>
@@ -154,7 +154,7 @@
                             </ListView>
                             <Label Content="Nazwa benefitu: "/>
                             <TextBox x:Name="TxtB_Benefit_Content"/>
-                            <Button Content="Dodaj Benefity" HorizontalAlignment="Center" Padding="10" Click="Btn_AddBenefitItem_Click"/>
+                            <Button Content="Dodaj Benefity" HorizontalAlignment="Center" Style="{StaticResource SearchButton}" Margin="10" Padding="10" Click="Btn_AddBenefitItem_Click"/>
                         </StackPanel>
                     </StackPanel>
                     <StackPanel Grid.Row="8" Grid.ColumnSpan="2" Margin="10">
@@ -170,7 +170,7 @@
                         <TextBox x:Name="TxtB_City" Margin="10"/>
                     </StackPanel>
                     <Label Content="Kategoria" Grid.Row="11" HorizontalAlignment="Left"/>
-                    <Border x:Name="BR_Items" Grid.Row="11" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="1" Background="White" CornerRadius="10" Margin="10,0,0,0" Padding="1">
+                    <Border x:Name="BR_Items" Grid.Row="11" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="1" Background="Transparent" CornerRadius="10" Margin="10,0,0,0" Padding="1">
                         <ScrollViewer MaxHeight="300" Padding="10" VerticalScrollBarVisibility="Auto">
                             <ItemsControl x:Name="IC_ItemsToChecked" Margin="15,0,0,0">
                                 <ItemsControl.ItemTemplate>
@@ -189,7 +189,7 @@
                     </Border>
                 </Grid>
 
-                <Button Grid.Row="1" x:Name="Btn_AddUpdateAnnouncment" Click="Btn_AddUpdateAnnouncment_Click" HorizontalAlignment="Center" Padding="10"/>
+                <Button Grid.Row="1" x:Name="Btn_AddUpdateAnnouncment" Click="Btn_AddUpdateAnnouncment_Click" Style="{StaticResource SearchButton}" Margin="10" HorizontalAlignment="Center" Padding="10"/>
             </Grid>
         </StackPanel>
         
