--- a/ASProjektWPF/Pages/CompanyAnnouncmentView.xaml
+++ b/ASProjektWPF/Pages/CompanyAnnouncmentView.xaml
@@ -9,8 +9,13 @@
       Title="CompanyAnnouncmentView">
 
     <Grid>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <ListView x:Name="LV_CompanyAnnouncment">
+        <Grid >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Button Padding="10" Margin="10" Style="{StaticResource TransparentBackButton}" HorizontalAlignment="Left" Background="Transparent" BorderThickness="0" Click="Btn_Back_Click"/>
+            <ListView x:Name="LV_CompanyAnnouncment" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
@@ -47,7 +52,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-        </StackPanel>
+        </Grid>
 
     </Grid>
 </Page>
