--- a/ASProjektWPF/Register.xaml
+++ b/ASProjektWPF/Register.xaml
@@ -16,6 +16,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Border Background="White">
@@ -34,10 +35,12 @@
                 <TextBlock Grid.Column="1" Text="Swiftly" VerticalAlignment="Center" Background="Transparent" MouseDown="SP_MouseDown"/>
                 <Button Grid.Column="2" Content="🗕" Click="Btn_MinimalizeApp_Clicked" Style="{StaticResource TasakBarButton}"/>
                 <Button Grid.Column="3" Content="&#x25A2;" Click="Btn_FullscreanApp_Clicked" Style="{StaticResource TasakBarButton}"/>
+
                 <Button x:Name="Btn_CloseApp" Grid.Column="4" Content="&#x2715;" Click="Btn_CloseApp_Clicked" Style="{StaticResource TasakBarButton}"/>
             </Grid>
         </Border>
-        <Border Grid.Row="1" CornerRadius="5" Background="#ececec" Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Button Grid.Row="1" Style="{StaticResource TransparentBackButton}" HorizontalAlignment="Left" Margin="10" Click="Btn_BackToLogin_Click"/>
+        <Border Grid.Row="2" CornerRadius="5" Background="#ececec" Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
@@ -48,14 +51,18 @@
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
                 <Label Content="Login:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <TextBox x:Name="TxB_Login" Grid.Column="1" />
+                <TextBox x:Name="TxB_Login" Grid.Column="1" Margin="10" BorderThickness="0" VerticalContentAlignment="Center"/>
                 <Label Grid.Row="1" Content="Haslo:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <PasswordBox x:Name="PsB_Password_1" Grid.Column="1" Grid.Row="1"/>
+                <PasswordBox x:Name="PsB_Password_1" Grid.Column="1" Grid.Row="1" Margin="10" BorderThickness="0" VerticalContentAlignment="Center"/>
                 <Label Grid.Row="2" Content="Powtórz haslo:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <TextBox x:Name="PsB_Password_2" Grid.Column="1" Grid.Row="2" />
-                <Button Content="Zarejestruj się" Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Click="Btn_Register_Click"/>
+                <PasswordBox x:Name="PsB_Password_2" Grid.Column="1" Grid.Row="2" Margin="10" BorderThickness="0" VerticalContentAlignment="Center"/>
+                <CheckBox x:Name="Cb_Company" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center" Content="Firma"/>
+                <CheckBox x:Name="CB_Admin" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" Content="Admin"/>
+                <Button Content="Zarejestruj się" Style="{StaticResource SearchButton}" Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Click="Btn_Register_Click"/>
             </Grid>
         </Border>
     </Grid>
