--- a/ASProjektWPF/Login.xaml
+++ b/ASProjektWPF/Login.xaml
@@ -54,7 +54,7 @@
                 <TextBox x:Name="TxtB_Login" Grid.Column="1" BorderThickness="0" Margin="10" VerticalContentAlignment="Center"/>
                 <Label Grid.Row="1" Content="Haslo:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <PasswordBox x:Name="PsB_Password" Grid.Column="1" Grid.Row="1" Password="" BorderThickness="0" Margin="10" VerticalContentAlignment="Center"/>
-                <CheckBox x:Name="Cb_Company" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" Content="Firma ?"/>
+                <CheckBox x:Name="Cb_Company" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" Content="Firma"/>
                 <StackPanel Orientation="Vertical" Grid.Row="3" Grid.ColumnSpan="2">
                     <Button Content="Zaloguj się"  HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Click="Btn_Login_Clicked" Style="{StaticResource SearchButton}" Margin="10"/>
                     <Button Content="Zarejestruj się" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10" Click="Btn_Register_Clicked" Style="{StaticResource SearchButton}" Margin="10"/>
